Import of JRYAN/Text-ParagraphDiff-2.43 from CPAN.
gitpan-cpan-distribution: Text-ParagraphDiff
gitpan-cpan-version:      2.43
gitpan-cpan-path:         JRYAN/Text-ParagraphDiff-2.43.tar.gz
gitpan-cpan-author:       JRYAN
gitpan-cpan-maturity:     released

--- a/examples/diff.html
+++ b/examples/diff.html
@@ -95,7 +95,7 @@
         <form>
         <table border="0" cellspacing="5">
         <td><input type="button" class="togglep" value="Toggle Plus" onclick="toggle_plus(); return false;" /></td><td width="10">&nbsp;</td>
-        <td><input type="button" class="togglem" value="Toggle inus" onclick="toggle_minus(); return false;" /></td><td width="10">&nbsp;</td>
+        <td><input type="button" class="togglem" value="Toggle Minus"onclick="toggle_minus(); return false;" /></td><td width="10">&nbsp;</td>
         </table>
         </form>
         </div>
